--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -858,9 +858,9 @@ instalações com materiais combustíveis.\n\n
         EXCETO:\n
         As edificações com área construída e/ou área de risco maior que 200 m2 classificadas nas divisões B-1, B-2, C-3, E-1, E-4, E-5, E-6, F-1,
         F-2, F-3, F-4, F-5, F-6, F-7, F-8, F-9, F-10, F-11, H-2, H3, H-4, H-5, J-2, J-3 e J-4 devem ser classificadas como Processo Técnico.
-        <u>Não necessariamente terá que ter projeto, mais obrigatoriamente terá vistoria.</u>\n
+        <u>Não necessariamente terá que ter projeto, mas obrigatoriamente terá vistoria.</u>\n
         As edificações com área construída e/ou área de risco que se enquadrem nas divisões: L-1, L-2, L-3 e M-2 devem ser classificadas como
-        Processo Técnico, independentemente da área. Não necessariamente terá que ter projeto mais obrigatoriamente terá vistoria.
+        Processo Técnico, independentemente da área. Não necessariamente terá que ter projeto mas obrigatoriamente terá vistoria.
 
     </string>
 
